1. Create required folder 2. Added JWT Implementions 3. Added DbContext and Initial Migration with User

--- a/Skypoint.API/Skypoint.API/appsettings.json
+++ b/Skypoint.API/Skypoint.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "supersecretkey_here_123456789"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=skypoint.db"
+  }
 }
