--- a/Skypoint.API/Skypoint.API/Skypoint.API.csproj
+++ b/Skypoint.API/Skypoint.API/Skypoint.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,12 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Skypoint.Application\Skypoint.Application.csproj" />
-    <ProjectReference Include="..\Skypoint.Domain\Skypoint.Domain.csproj" />
     <ProjectReference Include="..\Skypoint.Infrastructure\Skypoint.Infrastructure.csproj" />
   </ItemGroup>
 
