Render deployment prep

--- a/Skypoint.API/Skypoint.API/appsettings.json
+++ b/Skypoint.API/Skypoint.API/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Jwt": {
-    "Key": "supersecretkey_here_123456789"
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=skypoint.db"
-  }
+  "AllowedHosts": "*"
 }
