--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,11 @@
 services:
   - type: web
     name: skypoint-social-backend
-    env: dotnet
+    env: docker # <–– Trick: this forces it to use a custom setup
+    plan: free
+    buildCommand: dotnet build Skypoint.API/Skypoint.API/Skypoint.API.csproj
+    startCommand: dotnet Skypoint.API/Skypoint.API/Skypoint.API.dll
     branch: main
-    buildCommand: dotnet build Skypoint.API/Skypoint.API.csproj
-    startCommand: dotnet Skypoint.API/Skypoint.API.dll
     envVars:
       - key: ASPNETCORE_ENVIRONMENT
         value: Production
