Docker and Render changes

--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,8 @@
 services:
   - type: web
     name: skypoint-social-backend
-    runtime: dotnet
+    runtime: docker
     plan: free
-    buildCommand: dotnet build Skypoint.API/Skypoint.API/Skypoint.API.csproj
-    startCommand: dotnet Skypoint.API/Skypoint.API/Skypoint.API.dll
     branch: main
     envVars:
       - key: ASPNETCORE_ENVIRONMENT
